<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath/>
	</parent>
	
	<groupId>org.dubini</groupId>
	<artifactId>backofficeAPI</artifactId>
	<version>1.0-RELEASE</version>
	<name>backofficeAPI</name>
	<description>Backoffice API</description>
	
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	
	<dependencies>
		<!-- Spring Boot Starters -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>
	<dependency>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-data-jdbc</artifactId>
</dependency>
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		
		<!-- Thymeleaf Security -->
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>
		
		<!-- Validation -->
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		
		<!-- Database -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		
		<!-- JWT -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.12.6</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.12.6</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.12.6</version>
			<scope>runtime</scope>
		</dependency>
		<!-- JSON -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240303</version>
		</dependency>
		
		<!-- Environment Variables -->
		<dependency>
			<groupId>me.paulschwarz</groupId>
			<artifactId>spring-dotenv</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>3.2.0</version>
		</dependency>
		
		<!-- Lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	
		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
						<!-- Excluir DevTools en JAR normal también -->
						<exclude>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-devtools</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
<profiles>
    <!-- Perfil Native -->
    <profile>
        <id>native</id>
        <properties>
            <skipTests>true</skipTests>
        </properties>
        
        <!-- CRÍTICO: Excluir DevTools completamente del classpath -->
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-devtools</artifactId>
                <scope>provided</scope> <!-- Cambiar a provided para que no se incluya -->
            </dependency>
        </dependencies>
        
        <build>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                            <exclude>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-devtools</artifactId>
                            </exclude>
                        </excludes>
                        <!-- Excluir del classpath durante AOT -->
                        <excludeDevtools>true</excludeDevtools>
                    </configuration>
                    <executions>
                        <execution>
                            <id>process-aot</id>
                            <goals>
                                <goal>process-aot</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <extensions>true</extensions>
                    <configuration>
                        <imageName>${project.artifactId}</imageName>
                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>
<buildArgs>
    <buildArg>--no-fallback</buildArg>
    <buildArg>-H:+ReportExceptionStackTraces</buildArg>
    
    <!-- PostgreSQL - initialize at runtime -->
    <buildArg>--initialize-at-run-time=org.postgresql.Driver</buildArg>
    <buildArg>--initialize-at-run-time=org.postgresql.util.PGobject</buildArg>
    <buildArg>--initialize-at-run-time=io.netty</buildArg>
    <buildArg>--initialize-at-run-time=reactor.netty</buildArg>
    
    <!-- Jackson DEBE ser runtime -->
    <buildArg>--initialize-at-run-time=com.fasterxml.jackson</buildArg>
    
    <!-- JJWT - clases necesarias en build-time -->
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.lang</buildArg>
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.impl.lang</buildArg>
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.io.Decoders</buildArg>
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.io.Base64</buildArg>
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.io.Encoders</buildArg>
    <buildArg>--initialize-at-build-time=io.jsonwebtoken.impl.io.Codec</buildArg>
    
    <!-- Resto de JJWT en runtime -->
    <buildArg>--initialize-at-run-time=io.jsonwebtoken.jackson</buildArg>
    
    <buildArg>-H:+AddAllCharsets</buildArg>
    <buildArg>--enable-url-protocols=http,https</buildArg>
    
    <!-- Recursos -->
    <buildArg>-H:IncludeResources=.*.properties</buildArg>
    <buildArg>-H:IncludeResources=.*.xml</buildArg>
    <buildArg>-H:IncludeResources=.*.html</buildArg>
    <buildArg>-H:IncludeResources=META-INF/.*</buildArg>
    <buildArg>-H:IncludeResources=META-INF/services/.*</buildArg>
    
    <buildArg>-O2</buildArg>
    <buildArg>-J-Xmx4g</buildArg>
</buildArgs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>compile-no-fork</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </build>
    </profile>
</profiles>
</project>